@@ -1,5 +1,5 @@
 .\" Man page generated from reStructeredText.
-.TH nodeset 1 "2009-11-10" "1.2" "ClusterShell User Manual"
+.TH nodeset 1 "2010-02-22" "1.2" "ClusterShell User Manual"
 .SH NAME
 nodeset \- compute advanced nodeset operations
 
@@ -31,12 +31,17 @@ level magin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 ..
 
 .SH SYNOPSIS
-\fBnodeset\fP [ options ] [ command ]
+.INDENT 0.0
+.INDENT 3.5
+\fBnodeset\fP [COMMAND] [OPTIONS] [ns1 [\-ixX] ns2|...]
 
+.UNINDENT
+.UNINDENT
 
 .SH DESCRIPTION
 The \fBnodeset\fP command is an utility command provided with the ClusterShell
-library which implements some features of the NodeSet class.
+library which implements some features of the NodeSet and RangeSet classes.
+It provides easy manipulation of indexed cluster nodes.
 
 
 .SH OPTIONS
@@ -47,17 +52,17 @@ library which implements some features of the NodeSet class.
 .INDENT 7.0
 
 .TP
-.B \-\-count, \-c <nodeset> [nodeset ...]
+.B \-\-count , \-c
 Return the number of nodes in nodesets.
 
 
 .TP
-.B \-\-expand, \-e <nodeset> [nodeset ...]
+.B \-\-expand , \-e
 Expand nodesets to separate nodes.
 
 
 .TP
-.B \-\-fold, \-f <nodeset> [nodeset ...]
+.B \-\-fold , \-f
 Compact/fold nodesets (or separate nodes) into one nodeset.
 
 .UNINDENT
@@ -67,30 +72,20 @@ Compact/fold nodesets (or separate nodes) into one nodeset.
 .INDENT 7.0
 
 .TP
-.BI \-\-autostep\fn= <number> ,\ \-a\  <number>
+.BI \-\-autostep\fn= NUMBER ,\ \-a\  NUMBER
 Specify auto step threshold number when folding nodesets.
 If not specified, auto step is disabled.
 Example: autostep=4, "node2 node4 node6" folds in node[2,4,6] but autostep=3, "node2 node4 node6" folds in node[2\-6/2]
 
 
 .TP
-.BI \-\-exclude\fn= <nodeset> ,\ \-x\  <nodeset>
-Exclude provided node or nodeset from result. Can be specified
-several times.
+.B \-\-help , \-h
+This help page.
 
 
 .TP
-.B \-\-intersection , \-i
-Calculate nodesets intersection before processing command. This
-means that only nodes that are in every provided nodesets are
-used.
-
-
-.TP
-.B \-\-xor , \-X
-Calculate symmetric difference (XOR) between two nodesets before
-processing command. This means that nodes present in only one of
-the nodesets are used.
+.B \-\-quiet , \-q
+Quiet mode, hide any parse error messages (on stderr).
 
 
 .TP
@@ -100,13 +95,37 @@ numerical cluster ranges, eg. 1,5,18\-31.
 
 
 .TP
-.B \-\-quiet , \-q
-Quiet mode, hide any parse error messages (on stderr).
+.BI \-\-separator\fn= STRING ,\ \-S\  STRING
+Use specified separator string when expanding nodesets (default
+is \' \').
 
 
 .TP
 .B \-\-version , \-v
 Show ClusterShell version and exit.
+
+.UNINDENT
+
+.TP
+.B Operations (default is union):
+.INDENT 7.0
+
+.TP
+.BI \-\-exclude\fn= NODESET ,\ \-x\  NODESET
+Exclude provided node or nodeset.
+
+
+.TP
+.BI \-\-intersection\fn= NODESET ,\ \-i\  NODESET
+Calculate nodesets intersection. This means that only nodes that
+are in the two provided nodesets are used.
+
+
+.TP
+.BI \-\-xor\fn= NODESET ,\ \-X\  NODESET
+Calculate symmetric difference (XOR) between two nodesets. This
+This means that nodes present in only one of the nodesets are
+used.
 
 .UNINDENT
 .UNINDENT
@@ -171,7 +190,7 @@ node160 node161 node162 node163
 .INDENT 7.0
 
 .TP
-.B $ nodeset \-x node33 \-f node[32\-159]
+.B $ nodeset \-f node[32\-159] \-x node33
 .UNINDENT
 
 node[32,34\-159]
@@ -183,7 +202,7 @@ node[32,34\-159]
 .INDENT 7.0
 
 .TP
-.B $ nodeset \-i \-f node[32\-159] node[0\-7,20\-21,32,156\-159]
+.B $ nodeset \-f node[32\-159] \-i node[0\-7,20\-21,32,156\-159]
 .UNINDENT
 
 node[32,156\-159]
@@ -195,10 +214,40 @@ node[32,156\-159]
 .INDENT 7.0
 
 .TP
-.B $ nodeset \-\-xor \-f node[33\-159] node[32\-33,156\-159]
+.B $ nodeset \-f node[33\-159] \-\-xor node[32\-33,156\-159]
 .UNINDENT
 
 node[32,34\-155]
+.br
+
+.UNINDENT
+
+.SH HISTORY
+Command syntax has been changed since \fBnodeset\fP command available with ClusterShell v1.1. Operations, like \fI\-\-intersection\fP or \fI\-x\fP, are now specified between nodesets in the command line.
+
+.INDENT 0.0
+
+.TP
+.B ClusterShell v1.1:
+.INDENT 7.0
+
+.TP
+.B $ nodeset \-f \-x node[3,5\-6,9] node[1\-9]
+.UNINDENT
+
+node[1\-2,4,7\-8]
+.br
+
+
+.TP
+.B ClusterShell v1.2+:
+.INDENT 7.0
+
+.TP
+.B $ nodeset \-f node[1\-9] \-x node[3,5\-6,9]
+.UNINDENT
+
+node[1\-2,4,7\-8]
 .br
 
 .UNINDENT
@@ -222,5 +271,5 @@ Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
 .SH COPYRIGHT
 CeCILL-C V1
 
-.\" Generated by docutils manpage writer on 2009-11-10 14:15.
+.\" Generated by docutils manpage writer on 2010-02-22 17:29.
 .\" 
